--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,6 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>io.pivotal.gemfire stats</name>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>1.2.30</kotlin.version>
@@ -104,5 +102,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>local-maven-repo</id>
+            <url>file:///tamara2/users/ukohlmeyer/.m2/repository</url>
+        </repository>
+    </repositories>
 
 </project>
