--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.pivotal.gemfire</groupId>
-    <artifactId>stats</artifactId>
+    <groupId>org.apache.geode</groupId>
+    <artifactId>micrometer-stats</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.2.30</kotlin.version>
+        <kotlin.version>1.2.60</kotlin.version>
         <junit.version>4.12</junit.version>
-        <micrometer.version>1.0.2</micrometer.version>
+        <micrometer.version>1.0.6</micrometer.version>
     </properties>
 
     <dependencies>
